--- a/Ejobs/templates/jobs/applicant.html
+++ b/Ejobs/templates/jobs/applicant.html
@@ -15,13 +15,13 @@
       <h3> Gender :{{jobs.user.seeker.gender}}  </h3>
       <h3> Contact :{{jobs.user.seeker.contact}}  </h3>
       <h3> Address :{{jobs.user.seeker.address}}  </h3>
-      <h3> CV :{{jobs.user.seekersocialdetails.usercv}}  </h3>
+      <h3> CV :<a href="{{jobs.usercv.url}} " target='_'>download CV </a>  </h3>
 
     </div>
     <div class="job-item-low">
       <div class="job-item-cta">
-        <a href="{% url 'decline' %}" ><button class="btn btn-primary" style="margin-right:20px;"> accept application</button></a>
-        <a href="{% url 'decline' %}"><button class="btn btn-primary"> decline application </button></a>
+        <a href="{% url 'accept' job.id %}" ><button class="btn btn-primary" style="margin-right:20px;"> accept application</button></a>
+        <a href="{% url 'decline' job.id %}"><button class="btn btn-primary"> decline application </button></a>
       </div>
     </div>
     {% endfor %}
