--- a/Ejobs/templates/jobs/search.html
+++ b/Ejobs/templates/jobs/search.html
@@ -1,7 +1,7 @@
 {% include 'seeker/seekerHeader.html'%}
     <div class="cta">
         <div class="search-bar">
-             <form method="get" action="search" class="search-bar">            
+             <form method="get" action="{% url 'search' %}" class="search-bar">            
               <input type="search" placeholder="Search your job" name="query" id="query" class="search-bar-input">
               <button class="get-started-btn btn-primary" type ="submit">SEARCH</button>
             </form>
@@ -11,7 +11,7 @@
     {% for job in jobs %}
     <li class="job-item">
       <div class="job-item-left">
-        <h2 class="job-item-title">{{ job.job_title }}</h2>
+        <a href="{% url 'job_details_2' id=job.job_id %}"> <h2 class="job-item-title">{{ job.job_title }}</h2></a>
         {% comment %} <p class="job-desc">Job Description: {{ job.job_description }}</p> {% endcomment %}
         <p>Employer: {{ job.job_employer }}</p>
         <p>Position: {{ job.job_position }}</p>
@@ -30,10 +30,10 @@
         <p>Phone: {{ job.job_phone }}</p>
         <p>Email Us: <a href="">{{ job.job_email }}</a></p>
         <p>Apply On Our Website: <a href="">{{ job.job_website }}</a></p>
-        <div class="job-item-cta">
+        {% comment %} <div class="job-item-cta">
           <a href="{% url 'apply_job' job.job_id %}" ><button class="btn btn-primary" style="margin-right:20px;"> APPLY</button></a>
           <a href="{% url 'save_job' job.job_id %}"><button class="btn btn-primary"> save </button></a>
-        </div>
+        </div> {% endcomment %}
       </div>
     </li>
     {% endfor %}
