--- a/Ejobs/static/styles.css
+++ b/Ejobs/static/styles.css
@@ -567,53 +567,79 @@ label[for="id_user"] {
 }
 
 
-/* popup form */
+/* popup cv upload form */
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
+  top: 4.5rem;
+  right: 0;
   border: 3px solid #f1f1f1;
   z-index: 9;
+  max-width: 300px;
 }
-
-/* Add styles to the form container */
 .form-container {
   max-width: 300px;
   padding: 10px;
   background-color: white;
 }
-
-/* Full-width input fields */
-.form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
+.details{
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+.form-container .btn{
+  padding:1rem;
+}
+.btns{
+  margin-top:20px;
+}
+.btns .cancel{
+  margin-left: 40px;
+  margin-right: 20px;
+}
+.btns .apply{
+  margin-right: 20px;
 }
 
-/* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+
+
+
+
+
+/* popup logout form? */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Set a style for the submit/login button */
-.form-container .btn {
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
 
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
 
-  padding: 16px 20px;
-  border: none;
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
   cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
 }
