--- a/Ejobs/templates/seeker/seekerHeader.html
+++ b/Ejobs/templates/seeker/seekerHeader.html
@@ -15,6 +15,30 @@
         <li class="nav-item"><a href="{% url 'saved_jobs' %}"> saved jobs</a></li>
         <li class="nav-item"><a href="{% url 'appliedJobs' %}">Applied Jobs</a></li>
         <li class="nav-item"><a href="{% url 'seeker_profile' %}">{{ user.first_name }} </a></li>
-        <li class="nav-item"><a href="{% url 'logout' %}"> Logout</a></li>
+        <li class="nav-item" id="myBtn"><a>Logout</a></li>
     </ul>
 </nav>
+
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Are you sure you want to logout?</p><a href="{% url 'logout' %}"><button >Logout</button></a>
+  </div>
+
+</div>
+<script>
+var modal = document.getElementById("myModal");
+var btn = document.getElementById("myBtn");
+var span = document.getElementsByClassName("close")[0];
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+span.onclick = function() {
+  modal.style.display = "none";
+}
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
