--- a/Ejobs/templates/jobs/jobs.html
+++ b/Ejobs/templates/jobs/jobs.html
@@ -12,7 +12,6 @@
     <li class="job-item">
       <div class="job-item-left">
         <a href="{% url 'job_details_2' id=job.job_id %}"> <h2 class="job-item-title">{{ job.job_title }}</h2></a>
-        {% comment %} <p class="job-desc">Job Description: {{ job.job_description }}</p> {% endcomment %}
         <p>Employer: {{ job.job_employer }}</p>
         <p>Position: {{ job.job_position }}</p>
         
@@ -29,7 +28,10 @@
         <h5>Contact Info</h5>
         <p>Phone: {{ job.job_phone }}</p>
         <p>Email Us: <a href="">{{ job.job_email }}</a></p>
-        <p>Apply On Our Website: <a href="">{{ job.job_website }}</a></p>
+
+        {% comment %} <a href="{{ job.job_website }}" target="popup" onclick="tab.open('../{{ job.job_website }}','name')">{{ job.job_website }}</a> {% endcomment %}
+        <p>Apply On Our Website: <a href="{{ job.job_website }}" target="popup" onclick="tab.open('../{{ job.job_website }}','name')">{{ job.job_website }}</a></p>
+        {% comment %} <p>Apply On Our Website: <a href="">{{ job.job_website }}</a></p> {% endcomment %}
         {% comment %} <div class="job-item-cta">
           <a href="{% url 'apply_job' job.job_id %}" ><button class="btn btn-primary" style="margin-right:20px;"> APPLY</button></a>
           <a href="{% url 'save_job' job.job_id %}"><button class="btn btn-primary"> save </button></a>
