--- a/Ejobs/templates/recruiter/recruiter_login.html
+++ b/Ejobs/templates/recruiter/recruiter_login.html
@@ -5,7 +5,7 @@
         <div class="auth-left">
           <div class="auth-image-wrapper">
             <img
-              src="https://images.pexels.com/photos/5711921/pexels-photo-5711921.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+              src="https://images.unsplash.com/photo-1535451801241-b5395e1d4a1b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80"
               alt=""
             />
           </div>
