--- a/Ejobs/templates/homepage.html
+++ b/Ejobs/templates/homepage.html
@@ -3,51 +3,48 @@
     
         <div class="container">
             <div class="hero-left">
-                <h1 class="hero-title">Welcome to EJobs.</h1>
+                <h1 class="hero-title">Welcome to E-Jobs.</h1>
                 <p class="hero-desc">WHO UNDERSTANDSIT'S PERSONAL?<br>WE DO.</p>
                 <div class="cta">
                     <div class="search-bar">
-                    <div style="height: 10px;">
-                    
-                </div>
-                        {% comment %} <input type="text" placeholder="Search your job" class="search-bar-input"> {% endcomment %}
-                        <a href="{% url 'login' %}"><button class="get-started-btn btn-primary">Get started</button></a>
+                        <div style="height: 10px;">
+                        </div>
+                        <form method="get" action="{% url 'search' %}" class="search-bar">            
+              <input type="search" placeholder="Search your job" name="query" id="query" class="search-bar-input">
+              <button class="get-started-btn btn-primary" type ="submit">SEARCH</button>
+            </form>
                     </div>
-                    
                 </div>
             </div>
             
             <div class="hero-right">
-
                 <div class="hero-right-image">
                     <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
                 </div>
             </div>
-<div class="popup-msg">
-{% for message in messages %}
-    <p class="popup-msg-text">{{message}}</h1>
-{% endfor %}
-</div
+            <div class="popup-msg">
+            {% for message in messages %}
+                <p class="popup-msg-text">{{message}}</h1>
+            {% endfor %}
+            </div>
         </div>
     </main>
     <section class="services">
         <div class="services-container section-container">
             <h3>Our Services</h3>
             <ul class="services-items">
-                <li class="services-item">
+                <li class="services-item"><a  href="{% url 'home' %}">
                     <i class="fa fa-search"></i>
-                    <p>Job Search</p>
+                    <p>Job Search</p></a>
                 </li>
-                <li class="services-item">
+                <li class="services-item"><a  href="{% url 'login' %}">
                     <i class="fa fa-user-friends"></i>
-                    <p>Recruitment</p>
+                    <p>Recruitment</p></a>
                 </li>
-
-                <li class="services-item">
+                <li class="services-item"><a  href="{% url 'login' %}">
                     <i class="fa fa-home"></i>
-                    <p>Placement</p>
+                    <p>Placement</p></a>
                 </li>
-
             </ul>
         </div>
     </section>
@@ -61,4 +58,3 @@
     </section>
 </body>
 {% include "footer.html" %}
-</html>
