--- a/Ejobs/templates/seeker/seekerDashboard.html
+++ b/Ejobs/templates/seeker/seekerDashboard.html
@@ -1,14 +1,33 @@
 {% include "seeker/seekerHeader.html" %}
 <main class="hero">
-        <div class="container">
-            <div class="hero-text">
-                <h1 class="hero-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, minima.</h1>
-                <p class="hero-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem velit odio sit
-                    eligendi. Unde eaque est dolorem! Cupiditate, voluptate error.</p>
-                <div class="cta">
-                    <a href="{% url 'jobs' %}"><button class="btn btn-primary">view available Jobs</button></a>
-                </div>
+    <div class="container">
+        <div class="hero-text">
+            <h1 class="hero-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, minima.</h1>
+            <p class="hero-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem velit odio sit
+                eligendi. Unde eaque est dolorem! Cupiditate, voluptate error.</p>
+            <div class="cta">
+                <a href="{% url 'jobs' %}"><button class="btn btn-primary">view available Jobs</button></a>
             </div>
-    </main>
+            <h1 > Jobs that you may be interested in.</h1>
+            <ul class="job-items">
+                {% for job in jobs %}
+                <li class="job-item">
+                <div class="job-item-left">
+                    <a href="{% url 'job_details_2' id=job.job_id %}"> <h2 class="job-item-title">{{ job.job_title }}</h2></a>
+                </div>
+                <div class="job-item-low">
+                    <h5>Contact Info</h5>
+                    <p>Phone: {{ job.job_phone }}</p>
+                    <p>Email Us: <a href="">{{ job.job_email }}</a></p>
+                    <p>Apply On Our Website: <a href="">{{ job.job_website }}</a></p>
+                </div>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</main>
+
+
 
 {% include "footer.html" %}
